spacing fix

--- a/#3 CSS vars/style.css
+++ b/#3 CSS vars/style.css
@@ -34,6 +34,8 @@ p {
 .pic {
 	padding: var(--spacing);
 	background-color: var(--base-color);
+	width: 210px;
+	height: 280px;
 
 }
 
